--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "4.0.3",
     "gh-pages": "^3.2.3",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-scripts": "4.0.3"
   }
 }
